--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Hello dunia, shivam is here in the world of web Dev</h1>
+    <p>My name is shiv</p>
+    <a href="#">My GitHub Profile</a>
+    <h5>hi hwllo</h5>
+    <h1>newwwwwwwwwwwwwwwwwwwwwwww</h1>
 </body>
 </html>
 
