--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="#">My GitHub Profile</a>
     <h5>hi hwllo</h5>
     <h1>newwwwwwwwwwwwwwwwwwwwwwww</h1>
+    <h6>small head</h6>
 </body>
 </html>
 
